--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -146,7 +146,7 @@
                             </ul>
                         </li>
                         <li class="nav-main-item">
-                            <a class="nav-main-link" asp-controller="Customers" asp-action="Index">
+                            <a class="nav-main-link" asp-controller="Orders" asp-action="Index">
                                 <i class="nav-main-link-icon fa fa-shopping-bag"></i>
                                 <span class="nav-main-link-name">Order</span>
                             </a>
