--- a/Areas/Admin/Views/Orders/Detail.cshtml
+++ b/Areas/Admin/Views/Orders/Detail.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using ShoeShop.Data.Enum;
+@{
     ViewData["Title"] = "Order detail";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 
@@ -16,10 +17,15 @@
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Order information #@order.Id</h3>
                     <div class="block-options">
-                        <p class="mb-0 badge bg-primary">Status</p>
+                        <i class="fa fa-clock me-2"></i>@order.CreatedAt
                     </div>
                 </div>
                 <div class="block-content">
+                    <p class="fs-5 fw-semibold">Description</p>
+                    <div class="alert alert-info">
+                        @(order.Description == "" ? "No description" : order.Description)
+                    </div>
+                    <p class="fs-5 fw-semibold">Products</p>
                     <div class="table-responsive">
                         <table class="table table-bordered table-vcenter fs-sm">
                             <thead>
@@ -62,18 +68,33 @@
                         </table>
                     </div>
                     <div class="border-bottom py-3 d-flex justify-content-between" id="order-confirm-container">
-                        @if(order.OrderStatus == 1) {
-                            <div class="d-flex align-items-center gap-2">
-                                <i class="fa fa-check text-success fs-4"></i>
-                                <p class="mb-0 fs-6">ORDER WAS CONFIRMED</p>
-                            </div>
-                        } else {
-                            <div class="d-flex align-items-center gap-2">
-                                <i class="fa fa-times text-danger fs-4"></i>
-                                <p class="mb-0 fs-6">ORDER NOT CONFIRMED</p>
-                            </div>
-                            <button class="btn btn-hero btn-info" id="btn-confirm">Confirm</button>
+                        @{
+                            switch (order.OrderStatus)
+                            {
+                                case OrderStatus.Confirmed:
+                                    <div class="d-flex align-items-center gap-2">
+                                        <i class="fa fa-check text-success fs-4"></i>
+                                        <p class="mb-0 fs-6">ORDER WAS CONFIRMED</p>
+                                    </div>
+                                    break;
+
+                                case OrderStatus.Unconfirmed:
+                                    <div class="d-flex align-items-center gap-2">
+                                        <i class="fa fa-times text-danger fs-4"></i>
+                                        <p class="mb-0 fs-6">ORDER NOT CONFIRMED</p>
+                                    </div>
+                                    <button class="btn btn-hero btn-info" id="btn-confirm">Confirm</button>
+                                    break;
+
+                                case OrderStatus.Canceled:
+                                    <div class="d-flex align-items-center gap-2">
+                                        <i class="fa fa-check text-danger fs-4"></i>
+                                        <p class="mb-0 fs-6">ORDER WAS CANCELED</p>
+                                    </div>
+                                    break;
+                            }
                         }
+
                     </div>
                     <div class="border-bottom py-3">
                         <div class="d-flex align-items-center gap-2 mb-2">
