--- a/Areas/Admin/Views/Blogs/Index.cshtml
+++ b/Areas/Admin/Views/Blogs/Index.cshtml
@@ -41,7 +41,7 @@
                 <td>@Html.DisplayFor(modelItem => item.Id)</td>
             <td>
                     <div class="d-flex gap-2 align-items-center">
-                        <img class="rounded" style="width: 40px; height: 40px" src="~/img/products/@Html.DisplayFor(modelItem => item.Thumbnail.Name)" />
+                        <img class="rounded" style="width: 40px; height: 40px" src="~/img/blogs/@Html.DisplayFor(modelItem => item.Thumbnail.Name)" />
                         @Html.DisplayFor(modelItem => item.Name)
                     </div>
             </td>
