--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -1,33 +1,61 @@
-﻿@model ShoeShop.Models.Blog;
+﻿@model ShoeShop.ViewModels.BlogViewModel;
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 @section Scripts {
-    @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+
     <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
     <script>Dashmix.helpersOnLoad(['jq-select2', 'js-ckeditor']);</script>
-    <script src="~/admin/js/blog/add-blog.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#blog-form').submit(function (e) {
+                e.preventDefault();
+
+                var formData = new FormData($(this)[0]);
+
+                // Additional form data
+                formData.append('Content', CKEDITOR.instances['js-ckeditor'].getData());
+
+                // AJAX request to submit form
+                $.ajax({
+                    url: '/Admin/Blogs/Create',
+                    type: 'POST',
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (data) {
+                        window.location.href = '/Admin/Blogs/Index';
+                    },
+                    error: function (xhr, status, error) {
+                        console.error(error);
+                    }
+                });
+            });
+        });
+
+    </script>
 }
 
 <h1>Create</h1>
 
 <h4>Blog</h4>
 <hr />
-<div class="row" >
+<div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" id="blog-form">
+        <form asp-action="Create" id="blog-form" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="mb-4 form-group" >
-                <label class="form-label" asp-for="Thumbnail">Thumbnail</label>
-                <input type="file" id="thumbnail" asp-for="Thumbnail" class="form-control" accept="image/*" />
-                <img id="imagePreview"  style="display:none; max-width: 300px; max-height: 300px;" />
+
+            <div class="mb-4 form-group">
+                <label class="form-label" asp-for="Image">Image</label>
+                <input type="file" id="thumbnail" asp-for="Image" class="form-control" accept="image/*" />
+                <img id="imagePreview" style="display:none; max-width: 300px; max-height: 300px;" />
             </div>
 
             <div class="form-group">
@@ -46,15 +74,13 @@
                 <label class="form-label" asp-for="TopicID">Topic</label>
                 <select class="js-select2 form-select" id="topic-id" asp-for="TopicID" style="width: 100%;" data-placeholder="Choose topic..">
                     <option></option>
-                        @foreach (var topic in ViewBag.Topics)
-                        {
-                            <option value="@topic.Id">@topic.Name</option>
-                        }
+                    <option value="1">Sinh</option>
+                    <!-- Add dynamic options if needed -->
                 </select>
             </div>
 
             <div class="mb-4">
-                <label class="form-label" >Content</label>
+                <label class="form-label">Content</label>
                 <textarea id="js-ckeditor" name="content" asp-for="Content"></textarea>
             </div>
 
@@ -68,5 +94,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
-
