update fillter product

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -250,12 +250,15 @@
 								</div>
 							</div>
 							<div class="follow_us">
+								@{
+									string name = "@hgbaodev";
+								}
 								<h5>Follow Us</h5>
 								<ul>
-									<li><a href="#0"><img src="~/img/twitter_icon.svg" alt="" class="lazy"></a></li>
-									<li><a href="#0"><img src="~/img/facebook_icon.svg" alt="" class="lazy"></a></li>
-									<li><a href="#0"><img src="~/img/instagram_icon.svg" alt="" class="lazy"></a></li>
-									<li><a href="#0"><img src="~/img/youtube_icon.svg" alt="" class="lazy"></a></li>
+									<li><a href="https://twitter.com/hgbaodev"><img src="~/img/twitter_icon.svg" alt="" class="lazy"></a></li>
+									<li><a href="https://www.facebook.com/hgbaodev"><img src="~/img/facebook_icon.svg" alt="" class="lazy"></a></li>
+									<li><a href="https://www.instagram.com/hgbaodev"><img src="~/img/instagram_icon.svg" alt="" class="lazy"></a></li>
+									<li><a href="https://www.youtube.com/@name"><img src="~/img/youtube_icon.svg" alt="" class="lazy"></a></li>
 								</ul>
 							</div>
 						</div>
