--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
                             </a>
                         </li>
                         <li class="nav-main-item">
-                            <a class="nav-main-link" asp-controller="Customers" asp-action="Index">
+                            <a class="nav-main-link" asp-controller="Contacts" asp-action="Index">
                                 <i class="nav-main-link-icon fa fa-envelope"></i>
                                 <span class="nav-main-link-name">Contact</span>
                             </a>
