--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+	ViewData["Title"] = "Contact";
 }
 
 @section Styles {
 	<link href="~/css/contact.css" rel="stylesheet">
+	<link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.min.css">
 }
+
 
 <main class="bg_gray">
 	<div class="container margin_60">
@@ -48,21 +50,23 @@
 		<div class="container margin_60_35">
 			<h4 class="pb-3">Drop Us a Line</h4>
 			<div class="row">
-				<div class="col-lg-4 col-md-6 add_bottom_25">
-					<div class="form-group">
-						<input class="form-control" type="text" placeholder="Name *">
+				<form asp-controller="Contact" asp-action="SubmitContact">
+					<div class="col-lg-4 col-md-6 add_bottom_25">
+						<div class="form-group">
+							<input class="form-control" type="text" placeholder="Name *" name="name">
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="email" placeholder="Email *" name="email">
+						</div>
+						<div class="form-group">
+							<textarea class="form-control" style="height: 150px;"
+									  placeholder="Message *" name="message"></textarea>
+						</div>
+						<div class="form-group">
+							<input class="btn_1 full-width" type="submit" value="Submit">
+						</div>
 					</div>
-					<div class="form-group">
-						<input class="form-control" type="email" placeholder="Email *">
-					</div>
-					<div class="form-group">
-						<textarea class="form-control" style="height: 150px;"
-								  placeholder="Message *"></textarea>
-					</div>
-					<div class="form-group">
-						<input class="btn_1 full-width" type="submit" value="Submit">
-					</div>
-				</div>
+				</form>
 				<div class="col-lg-8 col-md-6 add_bottom_25">
 					<iframe class="map_contact"
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39714.47749917409!2d-0.13662037019554393!3d51.52871971170425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondra%2C+Regno+Unito!5e0!3m2!1sit!2ses!4v1557824540343!5m2!1sit!2ses"
