--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
 										<a asp-controller="Blog" asp-action="Index">Blog</a>
 									</li>
 									<li>
-										<a asp-controller="Home" asp-action="Contact">Contact</a>
+										<a asp-controller="Contact" asp-action="Index">Contact</a>
 									</li>
 								</ul>
 							</div>
