--- a/Areas/Admin/Views/Sizes/Index.cshtml
+++ b/Areas/Admin/Views/Sizes/Index.cshtml
@@ -42,10 +42,10 @@
             <table class="table table-bordered table-striped table-vcenter" id="color-table">
                 <thead>
                     <tr>
-                        <th>
+                        <th style="width: 80px;">
                             ID
                         </th>
-                        <th>
+                        <th style="width: 75%">
                             Name
                         </th>
                         <th class="text-center">Action</th>
@@ -88,6 +88,7 @@
                     [5, 10, 20],
                     [5, 10, 20]
                 ],
+                autoWidth: !1,
                 "processing": true,
                 "serverSide": true,
                 "filter": true,
